--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,34 +1,35 @@
-<h1>Sign Up</h1>
-
-<%= form_with(model: @user, local: true) do |form| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>User Authentication</title>
+</head>
+<body>
+  <% if session[:user_id] %>
+    <p>Welcome, <%= @current_user.username %>!</p>
+    <%= link_to 'Logout', logout_path, method: :delete %>
+  <% else %>
+    <%= form_with(url: login_path, method: :post) do |form| %>
+      <div>
+        <%= form.label :username %>
+        <%= form.text_field :username %>
+      </div>
+      <div>
+        <%= form.label :password %>
+        <%= form.password_field :password %>
+      </div>
+      <div>
+        <%= form.submit 'Login' %>
+      </div>
+    <% end %>
+    <p><%= link_to 'Register', register_path %></p>
   <% end %>
 
-  <div class="field">
-    <%= form.label :username %>
-    <%= form.text_field :username, id: :user_username %>
-  </div>
+  <% if notice %>
+    <p><%= notice %></p>
+  <% end %>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password, id: :user_password %>
-  </div>
-
-  <div class="field">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation, id: :user_password_confirmation %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit "Sign up" %>
-  </div>
-<% end %>
+  <% if alert %>
+    <p><%= alert %></p>
+  <% end %>
+</body>
+</html>
