--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,42 +1,25 @@
 <!-- app/views/carts/show.html.erb -->
 
-<h1>Sepetiniz</h1>
-
-<% if @cart.cart_items.any? %>
-  <table>
-    <thead>
+<h1>Cart for <%= @cart.user.email %></h1>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Publisher</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @cart.cart_items.each do |cart_item| %>
       <tr>
-        <th>Kitap Adı</th>
-        <th>Miktar</th>
-        <th>Birim Fiyat</th>
-        <th>Alt Toplam</th>
-        <th>İşlemler</th>
+        <td><%= cart_item.book.title %></td>
+        <td><%= cart_item.book.author %></td>
+        <td><%= cart_item.book.publisher %></td>
+        <td><%= number_to_currency(cart_item.book.price) %></td>
       </tr>
-    </thead>
-    <tbody>
-      <% @cart.cart_items.each do |item| %>
-        <tr>
-          <td><%= item.book.title %></td>
-          <td><%= item.quantity %></td>
-          <td><%= number_to_currency(item.book.price) %></td>
-          <td><%= number_to_currency(item.subtotal) %></td>
-          <td>
-            <%= link_to 'Sil', cart_item_path(item), method: :delete, data: { confirm: 'Bu öğeyi sepetinizden çıkarmak istediğinizden emin misiniz?' }, class: 'btn btn-danger' %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="3"><strong>Total:</strong></td>
-        <td><%= number_to_currency(@cart.total_price) %></td>
-      </tr>
-    </tfoot>
-  </table>
-
-  <%= link_to 'Öde', process_payment_path, method: :post, class: 'btn btn-success' %>
-<% else %>
-  <p>Sepetiniz boş.</p>
-<% end %>
-
-<%= link_to 'Kitap Listesi', books_path, class: 'btn btn-secondary' %>
+    <% end %>
+  </tbody>
+</table>
+<p>Total Price: <%= number_to_currency(@cart.total_price) %></p>
+<%= link_to 'Back to list', carts_path %>
