--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,30 +1,21 @@
-<h1>Kitap Listesi</h1>
-
+<h1>Books</h1>
 <table>
-  <thead>
+  <tr>
+    <th>Title</th>
+    <th>Author</th>
+    <th>Publisher</th>
+    <th>Price</th>
+  </tr>
+  <% @books.each do |book| %>
     <tr>
-      <th>Başlık</th>
-      <th>Yazar</th>
-      <th>Yayıncı</th>
-      <th>Fiyat</th>
-      <th>İşlemler</th>
+      <td><%= book.title %></td>
+      <td><%= book.author %></td>
+      <td><%= book.publisher %></td>
+      <td><%= number_to_currency(book.price) %></td>
+      <td><%= link_to 'Show', book %></td>
+      <td><%= link_to 'Edit', edit_book_path(book) %></td>
+      <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
-  </thead>
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= book.publisher %></td>
-        <td><%= number_to_currency(book.price) %></td>
-        <td>
-          <%= link_to 'Görüntüle', book_path(book), class: 'btn btn-info' %>
-          <%= link_to 'Düzenle', edit_book_path(book), class: 'btn btn-primary' %>
-          <%= link_to 'Sil', book_path(book), method: :delete, data: { confirm: 'Bu kitabı silmek istediğinizden emin misiniz?' }, class: 'btn btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
+  <% end %>
 </table>
-
-<%= link_to 'Yeni Kitap Ekle', new_book_path, class: 'btn btn-success' %>
+<%= link_to 'New Book', new_book_path %>
