--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,25 +1,15 @@
-<h1>Kitap Detayları</h1>
-
-<div>
-  <strong>Başlık:</strong>
-  <%= @book.title %>
-</div>
-
-<div>
-  <strong>Yazar:</strong>
+<h1><%= @book.title %></h1>
+<p>
+  <strong>Author:</strong>
   <%= @book.author %>
-</div>
-
-<div>
-  <strong>Yayıncı:</strong>
+</p>
+<p>
+  <strong>Publisher:</strong>
   <%= @book.publisher %>
-</div>
-
-<div>
-  <strong>Fiyat:</strong>
+</p>
+<p>
+  <strong>Price:</strong>
   <%= number_to_currency(@book.price) %>
-</div>
-
-<%= link_to 'Düzenle', edit_book_path(@book), class: 'btn btn-primary' %>
-<%= link_to 'Sil', book_path(@book), method: :delete, data: { confirm: 'Bu kitabı silmek istediğinizden emin misiniz?' }, class: 'btn btn-danger' %>
-<%= link_to 'Tüm Kitaplar', books_path, class: 'btn btn-secondary' %>
+</p>
+<%= link_to 'Edit', edit_book_path(@book) %> |
+<%= link_to 'Back', books_path %>
