--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,28 +1,21 @@
-<h1>Sepetinizdeki Ürünler</h1>
+<!-- app/views/carts/index.html.erb -->
 
+<h1>Carts</h1>
 <table>
   <thead>
     <tr>
-      <th>Kitap Adı</th>
-      <th>Miktar</th>
-      <th>Birim Fiyat</th>
-      <th>Alt Toplam</th>
-      <th>İşlemler</th>
+      <th>User</th>
+      <th>Total Price</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
-    <% @cart_items.each do |item| %>
+    <% @carts.each do |cart| %>
       <tr>
-        <td><%= item.book.title %></td>
-        <td><%= item.quantity %></td>
-        <td><%= number_to_currency(item.book.price) %></td>
-        <td><%= number_to_currency(item.subtotal) %></td>
-        <td>
-          <%= link_to 'Sil', cart_item_path(item), method: :delete, data: { confirm: 'Bu öğeyi sepetinizden çıkarmak istediğinizden emin misiniz?' }, class: 'btn btn-danger' %>
-        </td>
+        <td><%= cart.user.email %></td>
+        <td><%= number_to_currency(cart.total_price) %></td>
+        <td><%= link_to 'Show', cart_path(cart) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<%= link_to 'Yeni Ürün Ekle', new_cart_item_path, class: 'btn btn-success' %>
