--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,31 @@
-<h1>Kullanıcı Kaydı</h1>
+<!-- app/views/users/new.html.erb -->
 
-<%= form_with(model: @user, url: register_path, local: true) do |form| %>
+<h1>Sign Up</h1>
+
+<%= form_with(model: @user, url: users_path, local: true) do |form| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prevented this user from being saved:</h2>
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
       <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
+  <div>
     <%= form.label :username %>
-    <%= form.text_field :username, id: :user_username %>
+    <%= form.text_field :username %>
   </div>
 
-  <div class="field">
+  <div>
     <%= form.label :password %>
-    <%= form.password_field :password, id: :user_password %>
+    <%= form.password_field :password %>
   </div>
 
-  <div class="actions">
-    <%= form.submit "Kaydet", class: 'btn btn-primary' %>
+  <div>
+    <%= form.submit 'Sign Up' %>
   </div>
 <% end %>
-
-<%= link_to 'Giriş Yap', login_path, class: 'btn btn-secondary' %>
